--- a/build.gradle
+++ b/build.gradle
@@ -40,3 +40,15 @@ minecraft {
 dependencies {   
     minecraft 'net.minecraftforge:forge:1.13.2-25.0.10'
 }
+
+jar {
+    manifest {
+        attributes(["Specification-Title": "SBM-CharcoalBlock",
+                    "Specification-Vendor": "Built Broken Modding",
+                    "Specification-Version": "v1.0.0",
+                    "Implementation-Title": "SBM-CharcoalBlock",
+                    "Implementation-Version": "v1.0.0",
+                    "Implementation-Vendor" :"Built Broken Modding",
+                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")],)
+    }
+}
