--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,7 +1,7 @@
 modLoader="javafml" #mandatory
 loaderVersion="[25,)" #mandatory
-issueTrackerURL="http://github.com/bl4ckscor3/Sit/issues"
-displayURL="http://minecraft.curseforge.com/projects/sit"
+issueTrackerURL="https://github.com/BuiltBrokenModding/SBM-CharcoalBlock//issues"
+displayURL="http://minecraft.curseforge.com/projects/sbm-charcoal-block"
 authors="TheRealp455w0rd"
 
 [[mods]] #mandatory
