--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml" #mandatory
-loaderVersion="[26,)" #mandatory
+loaderVersion="[27,)" #mandatory
 issueTrackerURL="https://github.com/BuiltBrokenModding/SBM-CharcoalBlock/issues"
 displayURL="http://minecraft.curseforge.com/projects/sbm-charcoal-block"
 authors="TheRealp455w0rd"
@@ -13,13 +13,13 @@ description='''Just adds a charcoal block''' #mandatory
 [[dependencies.sbmcharcoalblock]]
     modId="forge"
     mandatory=true
-    versionRange="[26,)"
+    versionRange="[27,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.sbmcharcoalblock]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.14.2]"
+    versionRange="[1.14,1.15)"
     ordering="NONE"
     side="BOTH"
