--- a/build.gradle
+++ b/build.gradle
@@ -13,31 +13,40 @@ apply plugin: 'eclipse'
 
 version = '1.0.0'
 group = 'sbm-charcoalblock'
-archivesBaseName = 'SBM-CharcoalBlock-1.14.3'
+archivesBaseName = 'SBM-CharcoalBlock-1.15.1'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 minecraft {
-    mappings channel: 'snapshot', version: '20190626-1.14.3'
+    mappings channel: 'snapshot', version: '20191217-1.14.3'
 	
     runs {
-        client = {
-            properties 'forge.logging.markers': 'SCAN,REGISTRIES,REGISTRYDUMP'
-            properties 'forge.logging.console.level': 'debug'
-            workingDirectory project.file('run').canonicalPath
-            source sourceSets.main
+        client {
+            workingDirectory project.file('run')
+            property 'forge.logging.console.level', 'debug'
+
+            mods {
+                sbmcharcoalblock {
+                    source sourceSets.main
+                }
+            }
         }
-        server = {
-            properties 'forge.logging.markers': 'SCAN,REGISTRIES,REGISTRYDUMP'
-            properties 'forge.logging.console.level': 'debug'
-            workingDirectory project.file('run').canonicalPath
-            source sourceSets.main
+
+        server {
+            workingDirectory project.file('run')
+            property 'forge.logging.console.level', 'debug'
+
+            mods {
+                sbmcharcoalblock {
+                    source sourceSets.main
+                }
+            }
         }
     }
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.14.3-27.0.12'
+    minecraft 'net.minecraftforge:forge:1.15.1-30.0.14'
 }
 
 jar {
