--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,8 +1,8 @@
 modLoader="javafml" #mandatory
-loaderVersion="[30,)" #mandatory
+loaderVersion="[32,)" #mandatory
 issueTrackerURL="https://github.com/BuiltBrokenModding/SBM-CharcoalBlock/issues"
-displayURL="http://minecraft.curseforge.com/projects/sbm-charcoal-block"
-authors="TheRealp455w0rd"
+displayURL="http://curseforge.com/minecraft/mc-mods/sbm-charcoal-block"
+authors="TheRealp455w0rd, DarkCow, bl4ckscor3"
 
 [[mods]] #mandatory
 modId="sbmcharcoalblock" #mandatory
@@ -13,13 +13,13 @@ description='''Just adds a charcoal block''' #mandatory
 [[dependencies.sbmcharcoalblock]]
     modId="forge"
     mandatory=true
-    versionRange="[30,)"
+    versionRange="[32,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.sbmcharcoalblock]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.15,1.16)"
+    versionRange="[1.16,1.17)"
     ordering="NONE"
     side="BOTH"
