--- a/build.gradle
+++ b/build.gradle
@@ -1,61 +1,50 @@
 buildscript {
     repositories {
-        maven { url = 'https://files.minecraftforge.net/maven' }
-        jcenter()
+        maven { url = 'https://maven.minecraftforge.net' }
         mavenCentral()
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
     }
 }
+
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
+apply plugin: 'maven-publish'
 
 version = '1.1.0'
 group = 'sbm-charcoalblock'
-archivesBaseName = 'SBM-CharcoalBlock-1.16.5'
+archivesBaseName = 'SBM-CharcoalBlock-1.17.1'
 
-sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
+java.toolchain.languageVersion = JavaLanguageVersion.of(16)
 
 minecraft {
-    mappings channel: 'snapshot', version: '20210309-1.16.4'
-	
+    mappings channel: 'official', version: '1.17.1'
     runs {
         client {
+            properties 'forge.logging.console.level': 'debug'
             workingDirectory project.file('run')
-            property 'forge.logging.console.level', 'debug'
-
-            mods {
-                sbmcharcoalblock {
-                    source sourceSets.main
-                }
-            }
+            source sourceSets.main
         }
-
         server {
+            properties 'forge.logging.console.level': 'debug'
             workingDirectory project.file('run')
-            property 'forge.logging.console.level', 'debug'
-
-            mods {
-                sbmcharcoalblock {
-                    source sourceSets.main
-                }
-            }
+            source sourceSets.main
         }
     }
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.5-36.1.0'
+    minecraft 'net.minecraftforge:forge:1.17.1-37.0.13'
 }
 
 jar {
     manifest {
         attributes(["Specification-Title": "SBM-CharcoalBlock",
                     "Specification-Vendor": "Built Broken Modding",
-                    "Specification-Version": "v1.1.0",
+                    "Specification-Version": "1",
                     "Implementation-Title": "SBM-CharcoalBlock",
-                    "Implementation-Version": "v1.1.0",
+                    "Implementation-Version": "${version}",
                     "Implementation-Vendor" :"Built Broken Modding",
                     "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")],)
     }
