--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,26 +1,26 @@
-modLoader="javafml" #mandatory
-loaderVersion="[37,)" #mandatory
+modLoader="javafml"
+loaderVersion="[38,)"
 issueTrackerURL="https://github.com/BuiltBrokenModding/SBM-CharcoalBlock/issues"
-displayURL="http://curseforge.com/minecraft/mc-mods/sbm-charcoal-block"
-authors="TheRealp455w0rd, DarkCow, bl4ckscor3"
-license="MIT License https://github.com/BuiltBrokenModding/SBM-CharcoalBlock/blob/1.16/LICENSE"
+license="MIT License https://github.com/BuiltBrokenModding/SBM-CharcoalBlock/blob/1.18/LICENSE"
 
-[[mods]] #mandatory
-modId="sbmcharcoalblock" #mandatory
-version="1.1.0" #mandatory
-displayName="SBM-Charcoal Block" #mandatory
-description='''Just adds a charcoal block''' #mandatory
+[[mods]]
+	modId="sbmcharcoalblock"
+	version="${file.jarVersion}"
+	displayName="SBM-Charcoal Block"
+	description='''Just adds a charcoal block'''
+	displayURL="http://curseforge.com/minecraft/mc-mods/sbm-charcoal-block"
+	authors="TheRealp455w0rd, DarkCow, bl4ckscor3"
 
 [[dependencies.sbmcharcoalblock]]
     modId="forge"
     mandatory=true
-    versionRange="[37,)"
+    versionRange="[38,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.sbmcharcoalblock]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.17.1,1.18)"
+    versionRange="[1.18,1.19)"
     ordering="NONE"
     side="BOTH"
