--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
+		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '[6.0,6.2)', changing: true
     }
 }
 
@@ -15,12 +15,17 @@ apply plugin: 'maven-publish'
 
 version = '1.1.0'
 group = 'sbm-charcoalblock'
-archivesBaseName = 'SBM-CharcoalBlock-1.19.3'
+
+base {
+	archivesName = 'SBM-CharcoalBlock-1.20'
+}
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 minecraft {
-    mappings channel: 'official', version: '1.19.3'
+    mappings channel: 'official', version: '1.20'
+	copyIdeResources = true
+
     runs {
         client {
             properties 'forge.logging.console.level': 'debug'
@@ -36,17 +41,20 @@ minecraft {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.19.3-44.0.6'
+	minecraft 'net.minecraftforge:forge:1.20-46.0.12'
 }
 
-jar {
+tasks.named('jar', Jar).configure {
     manifest {
         attributes(["Specification-Title": "SBM-CharcoalBlock",
                     "Specification-Vendor": "Built Broken Modding",
                     "Specification-Version": "1",
                     "Implementation-Title": "SBM-CharcoalBlock",
                     "Implementation-Version": "${version}",
-                    "Implementation-Vendor" :"Built Broken Modding",
-                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")],)
+                    "Implementation-Vendor": "Built Broken Modding"])
     }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
 }
