--- a/build.gradle
+++ b/build.gradle
@@ -1,47 +1,38 @@
-buildscript {
-    repositories {
-        maven { url = 'https://maven.minecraftforge.net' }
-        mavenCentral()
-    }
-
-    dependencies {
-		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '[6.0,6.2)', changing: true
-    }
+plugins {
+	id 'java-library'
+	id 'eclipse'
+	id 'idea'
+	id 'net.neoforged.gradle.userdev' version '[7.0,7.1)'
+//	id 'org.parchmentmc.librarian.forgegradle' version '1.+'
 }
-
-apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'eclipse'
-apply plugin: 'maven-publish'
 
 version = '1.1.0'
 group = 'sbm-charcoalblock'
 
 base {
-	archivesName = 'SBM-CharcoalBlock-1.20'
+	archivesName = 'SBM-CharcoalBlock-1.20.2'
 }
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
-minecraft {
-    mappings channel: 'official', version: '1.20'
-	copyIdeResources = true
+runs {
+	configureEach {
+		systemProperty 'forge.logging.console.level', 'debug'
+		modSource project.sourceSets.main
+	}
 
-    runs {
-        client {
-            properties 'forge.logging.console.level': 'debug'
-            workingDirectory project.file('run')
-            source sourceSets.main
-        }
-        server {
-            properties 'forge.logging.console.level': 'debug'
-            workingDirectory project.file('run')
-            source sourceSets.main
-        }
-    }
+	client {
+		workingDirectory project.file('run/client')
+	}
+
+	server {
+		workingDirectory project.file('run/server')
+		programArgument '-nogui'
+	}
 }
 
 dependencies {
-	minecraft 'net.minecraftforge:forge:1.20-46.0.12'
+	implementation 'net.neoforged:neoforge:20.2.59-beta'
 }
 
 tasks.named('jar', Jar).configure {
