--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 //	id 'org.parchmentmc.librarian.forgegradle' version '1.+'
 }
 
-version = '1.1.0'
+version = '1.1.1'
 group = 'sbm-charcoalblock'
 
 base {
@@ -32,7 +32,7 @@ runs {
 }
 
 dependencies {
-	implementation 'net.neoforged:neoforge:20.2.59-beta'
+	implementation 'net.neoforged:neoforge:20.2.86'
 }
 
 tasks.named('jar', Jar).configure {
